...
                onClick = {
                    viewModel.onEvent(AddEditNoteEvent.SaveNote)
                }, backgroundColor = MaterialTheme.colors.primary
            ) {
                Icon(
                    painter = painterResource(id = R.drawable.ic_save),
                    contentDescription = "Save"
                )
            }
        }, scaffoldState = scaffoldState
    ) {
        Column(
            modifier = Modifier
...
